// Vitest Snapshot v1

exports[`\`monots fix\` should add exports to entrypoints 1`] = `
{
  "browser": "./dist/index.browser.esm.js",
  "exports": {
    ".": {
      "browser": "./dist/index.browser.esm.js",
      "import": "./dist/index.esm.js",
      "require": "./dist/index.cjs.js",
      "types": "./dist/index.d.ts",
    },
    "./extra": "./extra.js",
    "./index.js": {
      "browser": "./dist/index.browser.esm.js",
      "import": "./dist/index.esm.js",
      "require": "./dist/index.cjs.js",
      "types": "./dist/index.d.ts",
    },
    "./other": {
      "browser": "./dist/other.browser.esm.js",
      "import": "./dist/other.esm.js",
      "require": "./dist/other.cjs.js",
      "types": "./dist/other.d.ts",
    },
    "./other.js": {
      "browser": "./dist/other.browser.esm.js",
      "import": "./dist/other.esm.js",
      "require": "./dist/other.cjs.js",
      "types": "./dist/other.d.ts",
    },
    "./package.json": "./package.json",
    "./types/*": "./dist/*.d.ts",
  },
  "files": [
    "dist",
    "other",
  ],
  "main": "./dist/index.cjs.js",
  "module": "./dist/index.esm.js",
  "monots": {
    "addExportsToEntrypoints": true,
    "entrypoints": [
      "index.ts",
      "other.ts",
    ],
    "externalModules": [],
    "extraExports": {
      "./extra": "./extra.js",
    },
    "mode": "library",
    "tsconfigs": {},
  },
  "name": "@scoped/add",
  "type": "module",
  "types": "./dist/index.d.ts",
  "version": "1.0.0",
}
`;

exports[`\`monots fix\` should add exports to entrypoints 2`] = `
{
  "browser": "../dist/other.browser.esm.js",
  "exports": {
    ".": {
      "browser": "./../dist/other.browser.esm.js",
      "import": "./../dist/other.esm.js",
      "require": "./../dist/other.cjs.js",
      "types": "./../dist/other.d.ts",
    },
    "./index.js": {
      "browser": "./../dist/other.browser.esm.js",
      "import": "./../dist/other.esm.js",
      "require": "./../dist/other.cjs.js",
      "types": "./../dist/other.d.ts",
    },
  },
  "main": "../dist/other.cjs.js",
  "module": "../dist/other.esm.js",
  "types": "../dist/other.d.ts",
}
`;

exports[`\`monots fix\` should support ignoring exports 1`] = `
{
  "browser": "./dist/index.browser.esm.js",
  "dependencies": {
    "@scoped/b": "^2.0.0",
  },
  "files": [
    "dist",
  ],
  "main": "./dist/index.cjs.js",
  "module": "./dist/index.esm.js",
  "monots": {
    "entrypoints": [
      "index.{ts,tsx}",
    ],
    "externalModules": [],
    "ignoreExports": true,
    "mode": "library",
    "tsconfigs": {},
  },
  "name": "@scoped/a",
  "type": "module",
  "types": "./dist/index.d.ts",
  "version": "1.0.0",
}
`;

exports[`\`monots fix\` should update the package.json files 1`] = `
{
  "browser": "./dist/index.browser.esm.js",
  "dependencies": {
    "@scoped/b": "^2.0.0",
  },
  "exports": {
    ".": {
      "browser": "./dist/index.browser.esm.js",
      "import": "./dist/index.esm.js",
      "require": "./dist/index.cjs.js",
      "types": "./dist/index.d.ts",
    },
    "./index.js": {
      "browser": "./dist/index.browser.esm.js",
      "import": "./dist/index.esm.js",
      "require": "./dist/index.cjs.js",
      "types": "./dist/index.d.ts",
    },
    "./package.json": "./package.json",
    "./types/*": "./dist/*.d.ts",
  },
  "files": [
    "dist",
  ],
  "main": "./dist/index.cjs.js",
  "module": "./dist/index.esm.js",
  "name": "@scoped/a",
  "type": "module",
  "types": "./dist/index.d.ts",
  "version": "1.0.0",
}
`;

exports[`\`monots fix\` should update the package.json files 2`] = `
{
  "browser": "./dist/index.browser.esm.js",
  "dependencies": {
    "@scoped/c": "^1.0.0",
  },
  "exports": {
    ".": {
      "browser": "./dist/index.browser.esm.js",
      "import": "./dist/index.esm.js",
      "require": "./dist/index.cjs.js",
    },
    "./index.js": {
      "browser": "./dist/index.browser.esm.js",
      "import": "./dist/index.esm.js",
      "require": "./dist/index.cjs.js",
    },
    "./package.json": "./package.json",
  },
  "files": [
    "dist",
  ],
  "main": "./dist/index.cjs.js",
  "module": "./dist/index.esm.js",
  "name": "@scoped/b",
  "type": "module",
  "version": "2.0.0",
}
`;

exports[`\`monots fix\` should update the package.json files 3`] = `
{
  "browser": "./dist/index.browser.esm.js",
  "exports": {
    ".": {
      "browser": "./dist/index.browser.esm.js",
      "import": "./dist/index.esm.js",
      "require": "./dist/index.cjs.js",
      "types": "./dist/index.d.ts",
    },
    "./and-another": {
      "browser": "./dist/and-another.browser.esm.js",
      "import": "./dist/and-another.esm.js",
      "require": "./dist/and-another.cjs.js",
      "types": "./dist/and-another.d.ts",
    },
    "./and-another.js": {
      "browser": "./dist/and-another.browser.esm.js",
      "import": "./dist/and-another.esm.js",
      "require": "./dist/and-another.cjs.js",
      "types": "./dist/and-another.d.ts",
    },
    "./and-another/nested": {
      "browser": "./dist/and-another/nested.browser.esm.js",
      "import": "./dist/and-another/nested.esm.js",
      "require": "./dist/and-another/nested.cjs.js",
      "types": "./dist/and-another/nested.d.ts",
    },
    "./and-another/nested.js": {
      "browser": "./dist/and-another/nested.browser.esm.js",
      "import": "./dist/and-another/nested.esm.js",
      "require": "./dist/and-another/nested.cjs.js",
      "types": "./dist/and-another/nested.d.ts",
    },
    "./and-another/nested/cool": {
      "browser": "./dist/and-another/nested/cool.browser.esm.js",
      "import": "./dist/and-another/nested/cool.esm.js",
      "require": "./dist/and-another/nested/cool.cjs.js",
      "types": "./dist/and-another/nested/cool.d.ts",
    },
    "./and-another/nested/cool.js": {
      "browser": "./dist/and-another/nested/cool.browser.esm.js",
      "import": "./dist/and-another/nested/cool.esm.js",
      "require": "./dist/and-another/nested/cool.cjs.js",
      "types": "./dist/and-another/nested/cool.d.ts",
    },
    "./extra": "./extra.js",
    "./index.js": {
      "browser": "./dist/index.browser.esm.js",
      "import": "./dist/index.esm.js",
      "require": "./dist/index.cjs.js",
      "types": "./dist/index.d.ts",
    },
    "./other": {
      "browser": "./dist/other.browser.esm.js",
      "import": "./dist/other.esm.js",
      "require": "./dist/other.cjs.js",
      "types": "./dist/other.d.ts",
    },
    "./other.js": {
      "browser": "./dist/other.browser.esm.js",
      "import": "./dist/other.esm.js",
      "require": "./dist/other.cjs.js",
      "types": "./dist/other.d.ts",
    },
    "./package.json": "./package.json",
    "./types/*": "./dist/*.d.ts",
  },
  "files": [
    "and-another",
    "cool",
    "dist",
    "nested",
    "other",
  ],
  "main": "./dist/index.cjs.js",
  "module": "./dist/index.esm.js",
  "monots": {
    "entrypoints": [
      "index.ts",
      "other.ts",
      "and-another/index.ts",
      "and-another/nested/cool.ts",
      "and-another/nested/index.ts",
    ],
    "externalModules": [],
    "extraExports": {
      "./extra": "./extra.js",
    },
    "mode": "library",
    "tsconfigs": {},
  },
  "name": "@scoped/c",
  "type": "module",
  "types": "./dist/index.d.ts",
  "version": "1.0.0",
}
`;

exports[`\`monots fix\` should update the package.json files 4`] = `
{
  "browser": "",
  "dependencies": {
    "@scoped/b": "^2.0.0",
  },
  "exports": {
    "./package.json": "./package.json",
    "./types/*": "./dist/*.d.ts",
  },
  "files": [
    "dist",
  ],
  "main": "",
  "module": "",
  "monots": {
    "entrypoints": [],
    "externalModules": [],
    "mode": "library",
    "sourceFolderName": "",
    "tsconfigs": {},
  },
  "name": "@scoped/ts",
  "type": "module",
  "types": "",
  "version": "1.0.0",
}
`;

exports[`\`monots fix\` should update the relative baseTsconfig files 1`] = `
{
  "__AUTO_GENERATED__": [
    "To update the configuration edit the following field in the 'package.json' for this package.",
    "\`monots.tsconfigs.src\`",
    "",
    "Then run the command to automatically update everything: \`monots fix\`",
  ],
  "compilerOptions": {
    "composite": true,
    "declaration": true,
    "emitDeclarationOnly": true,
    "noEmit": false,
    "outDir": "../dist",
    "types": [],
  },
  "extends": "../../../relative/tsconfig.json",
  "references": [
    {
      "path": "../../scoped__b/src",
    },
  ],
}
`;

exports[`\`monots fix\` should update the relative baseTsconfig files 2`] = `
{
  "__AUTO_GENERATED__": [
    "To update the configuration edit the following field in the 'package.json' for this package.",
    "\`monots.tsconfigs.src\`",
    "",
    "Then run the command to automatically update everything: \`monots fix\`",
  ],
  "compilerOptions": {
    "noEmit": true,
    "types": [],
  },
  "extends": "../../../relative/tsconfig.json",
  "references": [],
}
`;

exports[`\`monots fix\` should update the tsconfig files 1`] = `
{
  "__AUTO_GENERATED__": [
    "To update the configuration edit the following field in the 'package.json' for this package.",
    "\`monots.tsconfigs.src\`",
    "",
    "Then run the command to automatically update everything: \`monots fix\`",
  ],
  "compilerOptions": {
    "composite": true,
    "declaration": true,
    "emitDeclarationOnly": true,
    "noEmit": false,
    "outDir": "../dist",
    "types": [],
  },
  "extends": "@monots/tsconfig/tsconfig.json",
  "references": [
    {
      "path": "../../scoped__b/src",
    },
  ],
}
`;

exports[`\`monots fix\` should update the tsconfig files 2`] = `
{
  "__AUTO_GENERATED__": [
    "To update the configuration edit the following field in the 'package.json' for this package.",
    "\`monots.tsconfigs.src\`",
    "",
    "Then run the command to automatically update everything: \`monots fix\`",
  ],
  "compilerOptions": {
    "noEmit": true,
    "types": [],
  },
  "extends": "@monots/tsconfig/tsconfig.json",
  "references": [
    {
      "path": "../../scoped__c/src",
    },
  ],
}
`;

exports[`\`monots fix\` should update the tsconfig files 3`] = `
{
  "__AUTO_GENERATED__": [
    "To update the configuration edit the following field in the 'package.json' for this package.",
    "\`monots.tsconfigs.src\`",
    "",
    "Then run the command to automatically update everything: \`monots fix\`",
  ],
  "compilerOptions": {
    "composite": true,
    "declaration": true,
    "emitDeclarationOnly": true,
    "noEmit": false,
    "outDir": "../dist",
    "types": [],
  },
  "extends": "@monots/tsconfig/tsconfig.json",
  "references": [],
}
`;

exports[`\`monots fix\` should update the tsconfig files 4`] = `
{
  "__AUTO_GENERATED__": [
    "To update the configuration edit the following field in the 'package.json' for this package.",
    "\`monots.tsconfigs.\`",
    "",
    "Then run the command to automatically update everything: \`monots fix\`",
  ],
  "compilerOptions": {
    "composite": true,
    "declaration": true,
    "emitDeclarationOnly": true,
    "noEmit": false,
    "outDir": "dist",
    "types": [],
  },
  "extends": "@monots/tsconfig/tsconfig.json",
  "references": [
    {
      "path": "../scoped__b/src",
    },
  ],
}
`;
